Quiz app working

--- a/Parse_app/menus/templates/Homepage.html
+++ b/Parse_app/menus/templates/Homepage.html
@@ -92,7 +92,7 @@
         <img src = "{% static "images/P.png" %}" width="100"><h1>Parse</h1></img>
         <p>Regale in the World of Wisdom</p>
         <div class="login-buttons">
-            <a href="account/login" class="login-button">Log In</a>
+            <a href="/login" class="login-button">Log In</a>
             <a href="account/create" class="login-button">Sign Up</a>
         </div>
     </header>
