--- a/Parse_app/menus/templates/Courses.html
+++ b/Parse_app/menus/templates/Courses.html
@@ -10,6 +10,25 @@
     <h1>Hello, world!</h1>
 
     <div class="container mt-5 pt-5">
+      <div class="col-md-2">
+          
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+
+        THIS IS A TEXT
+      </div>
+
+    </div>
+
+    <div class="container mt-5 pt-5">
         <div class="col-md-6 mx-auto">
             <form>
                 <div class="form-group">
@@ -25,6 +44,8 @@
           </form>
         </div>
     </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
